--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <title>Gabriel Feippe | CSE 121B | BYU-Idaho</title>
   </head>
   <body>
-    <h1>Gabriel Feippe | CSE 121B | BYU-Idaho</h1>
+    <h1>Gabriel Feippe, CSE 121B, BYU-Idaho</h1>
     <h2>Montevideo, Uruguay</h2>
     <hr>
   </body>
