W06 Final Project Application

--- a/movies/index.html
+++ b/movies/index.html
@@ -11,15 +11,16 @@
         <span id="header-logo">Trending Movies</span>
         <nav id="header-menu">
             <a id="header-menu-trending" class="selected">Trending</a>
-            <a id="header-menu-categories">Categories</a>
-            <a id="header-menu-search">Search</a>
+            <!--<a id="header-menu-categories">Categories</a>
+            <a id="header-menu-search">Search</a>-->
         </nav>
     </header>
     <section id="content">
         <section id="content-main-banner">
             <h1>Trending movies for you!</h1>
         </section>
-        <div id="movie-list">xxxxxx</div>
+        <div id="main-filter-section"></div>
+        <div id="movie-list"></div>
     </section>
     <footer>
         Made with love by Gabriel Feippe
